@@ -8,27 +8,22 @@ import se.skltp.tak.web.repository.AnvandareRepository;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class AnvandareService {
 
-    AnvandareRepository repository;
+    private final AnvandareRepository repository;
+
 
     @Autowired
     public AnvandareService(AnvandareRepository repository) {
         this.repository = repository;
     }
 
-    public Anvandare getAnvandareByUsername(String username) {
-        return repository.findFirstByAnvandarnamn(username);
-    }
-
     public PagedEntityList<Anvandare> getEntityList(Integer offset, Integer max) {
         List<Anvandare> contents = repository.findAll().stream()
                 .skip(offset)
-                .limit(max)
-                .collect(Collectors.toList());
+                .limit(max).toList();
         long total = repository.count();
         return new PagedEntityList<>(contents, (int) total, offset, max);
     }
@@ -38,24 +33,31 @@ public class AnvandareService {
     }
 
     public Anvandare add(Anvandare instance) {
-        if (instance==null || instance.getLosenord()==null || instance.getLosenord().isBlank()) {
+        if (instance == null || instance.getLosenordHash() == null || instance.getLosenordHash().isBlank()) {
             throw new IllegalArgumentException("Lösenord saknas");
         }
+        instance.setLosenordHash(instance.getLosenordHash());
+
         return repository.save(instance);
     }
 
     public Anvandare update(Anvandare instance) {
-        if (instance==null) throw new IllegalArgumentException("Användare saknas");
-        Anvandare current = repository.findById(instance.getId()).orElseThrow(() ->
-                new IllegalArgumentException(String.format("Användare med id %d saknas", instance.getId())));
+        if (instance == null) throw new IllegalArgumentException("Användare saknas");
+
+        Anvandare current = repository.findById(instance.getId())
+                .orElseThrow(() -> new IllegalArgumentException(
+                        String.format("Användare med id %d saknas", instance.getId())));
+
         current.setAnvandarnamn(instance.getAnvandarnamn());
         current.setAdministrator(instance.getAdministrator());
-        if (instance.getLosenord() != null && !instance.getLosenord().isBlank()) {
-            current.setLosenord(instance.getLosenord());
+        if (instance.getLosenordHash() != null && !instance.getLosenordHash().isBlank()) {
+            current.setLosenordHash(instance.getLosenordHash());
         }
+
         return repository.save(current);
     }
 
+    // Ta bort en användare baserat på ID och version
     public boolean delete(Long id, Long version) {
         Optional<Anvandare> opt = repository.findById(id);
         if (opt.isPresent()) {
